tests/baselines/reference/moduleAugmentationCollidingNamesInAugmentation1(strict=true).errors.txt
map1.ts(6,18): error TS7008: Member 'x0' implicitly has an 'any' type.
map2.ts(6,18): error TS7008: Member 'x1' implicitly has an 'any' type.


==== map1.ts (1 errors) ====
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface I {x0}
                     ~~
!!! error TS7008: Member 'x0' implicitly has an 'any' type.
    }
    
==== map2.ts (1 errors) ====
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface I {x1}
                     ~~
!!! error TS7008: Member 'x1' implicitly has an 'any' type.
    }
    
    
==== observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    
==== main.ts (0 errors) ====
    import { Observable } from "./observable"
    import "./map1";
    import "./map2";
    
    let x: Observable<number>;
    